@@ -10,15 +10,12 @@ import com.goorp.backend.exception.ErrorCode;
 import com.goorp.backend.repository.CommentRepository;
 import com.goorp.backend.repository.MemberRepository;
 import com.goorp.backend.repository.PostRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
+@RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class CommentService {
 
@@ -26,43 +23,26 @@ public class CommentService {
     private final PostRepository postRepository;
     private final MemberRepository memberRepository;
 
-
-    @Autowired
-    public CommentService(CommentRepository commentRepository, PostRepository postRepository,
-        MemberRepository memberRepository) {
-        this.commentRepository = commentRepository;
-        this.postRepository = postRepository;
-        this.memberRepository = memberRepository;
-    }
-
     // CREATE
     @Transactional
     public CommentResponseDto createComment(Long postId, CommentRequestDto commentRequestDto) {
         Post post = postRepository.findById(postId)
             .orElseThrow(() -> new CommentException(ErrorCode.ID_NOT_FOUNT, "postId 가 없습니다."));
 
-        Member member = memberRepository.findByName(commentRequestDto.getMemberName())
-            .orElseThrow(() -> new CommentException(ErrorCode.ID_NOT_FOUNT, "MemberName 이 없습니다."));
+        Member member = memberRepository.findByAccountId(accountId)
+            .orElseThrow(
+                () -> new CommentException(ErrorCode.NOT_FOUND_MEMBER,"멤버 ID를 찾을 수 없습니다: " + accountId));
 
-        Comment comment = Comment.builder()
-            .post(post)
-            .member(member)
-            .content(commentRequestDto.getContent())
-            .commentGroup(commentRequestDto.getGroup())
-            .groupCnt(commentRequestDto.getGroupCnt())
-            .depth(commentRequestDto.getDepth())
-            .createdAt(LocalDate.now())
-            .updatedAt(LocalDate.now())
-            .build();
-
-        Comment savedComment = commentRepository.save(comment);
-        return CommentResponseDto.of(savedComment);
+        Comment comment = getComment(request, member, post);
+        comment = commentRepository.save(comment);
+        comment.updateCommentGroup();
+        return commentResponseDto(comment);
     }
 
     // READ
     public List<CommentResponseDto> getAllComments(Long postId) {
         List<Comment> comments = commentRepository.findByPostId(postId);
-        return comments.stream().map(CommentResponseDto::of).collect(Collectors.toList());
+        return comments.stream().map(CommentResponseDto::of).toList();
     }
 
     // DELETE
@@ -73,6 +53,25 @@ public class CommentService {
         commentRepository.findById(commentId)
             .orElseThrow(() -> new CommentException(ErrorCode.ID_NOT_FOUNT, "commentId 가 없습니다."));
         commentRepository.deleteById(commentId);
+    }
+
+    private Comment getComment(CommentRequestDto request, Member member, Post post) {
+        Comment comment;
+        if (request.hasParentComment()) {
+            Comment parentComment = commentRepository.findById((long) request.getParentCommentId())
+                .orElseThrow(() -> new CommentException(ErrorCode.NOT_FOUND_COMMENT, "부모 댓글 ID를 찾을 수 없습니다: " + request.getParentCommentId()));
+            comment = Comment.replyToComment(request.getContent(), member, post, parentComment);
+        } else {
+            comment = Comment.createComment(request.getContent(), member, post);
+        }
+        return comment;
+    }
+
+    private CommentResponseDto commentResponseDto(Comment comment) {
+        if (comment == null) {
+            return null;
+        }
+        return CommentResponseDto.of(comment);
     }
 }
 
